# CS223_Apr18_01

./: CMakeLists.txt  README.md  SRS.docx  TEST.doc  presentation.pptx  readme.txt
code/: CMakeLists.txt
code/Database/: File.cpp
code/src/: Init.cpp  Init.h  main.cpp
code/src/Auth/: User.cpp  User.h
code/src/Conference Details/: Conference.cpp  Conference.h
code/src/Database/: File.cpp
code/src/Registration/: Payment.cpp  Payment.h
code/src/View/: Menu.cpp  Menu.h  Views.cpp  Views.h
data/User/: admin.txt
